--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "config": "^2.0.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "faker": "^4.1.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
+    "js-yaml": "^3.12.0",
     "morgan": "~1.9.0",
     "oracledb": "^2.3.0"
   }
