--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "jade": "~1.11.0",
     "js-yaml": "^3.12.0",
     "morgan": "~1.9.0",
-    "oracledb": "^2.3.0"
+    "oracledb": "^2.3.0",
+    "bluebird": "~3.5.1",
+    "mongodb": "~3.1.3"
   }
 }
